# $Id: CHANGELOG,v 1.128 2005/01/02 01:11:14 tom_kelly33 Exp $

* 2005-01-01
	[mklivecd]
	- added syslinux >= 1.76-15mdk as a requirement
	- commented out halt file copy 
	- readjusted step count for progress bar
* 2004-12-29,30,31
	[mklivecd]
	- adjusted step counter for initrd progress
	- commented out some of TV's patches
	[hwdetect]
	- fixed $rawX call (parameter list changed)
	- ignore devfs if kernel 26
	- removed old getpersistent code
	[linuxrc.in]
	- added ide devices hda to hdt

* 2004-12-22
	[mklivecd]
	- added "--noprompt" boot option from Ross Thomas

* Dec 20th, 2004
	[mklivecd]: 
	- added 'nomce acpi=ht' to append options
	- added keyboard patch (Thierry Vignaud)
	- reduced $o_timeout to 150
	[linuxrc]
	- changed ramsize from totalmem/5 to /3
	- added scsi_cdrom check for /dev/sr[0-99] (Yoshinori Okuji)
	[rc.sysinit] 
	- removed chmod a+rw after /etc copy
	[hwdetect]
	- removed call to hwdetect_getpersistent 
	- fstab changes (Texstar)
	- usbdevfs changed to usbfs 

* Oct 6th. 2004 
  many changes to get to this point. Release 0.5.8 was
  the last for MDK 10.0. 

* Fri, Feb 27, 2004, 0.5.7-cvs
  + Buchan Milne <bgmilne@obsidian.co.za>:
    [halt.local]:
      - Added for custom commands to be executed at shutdown, eg.
        CD eject ('noeject' boot option disables CD eject)
    [linuxrc]:
      - Fix error on illegal attempt to unmount /initrd/cdrom upon
        system shutdown
      - Added hostname= boot option to set the hostname
    [mklivecd]:
      - Add support ('--extraisofiles' option) for adding
        additional files to the root of the LiveCD ISO image
        (ie to see when browsing the CD normally)
  + Jaco Greeff <jaco@linuxminicd.org>:
    [FAQ]:
      - Point to the gif2lss program in the boot splash section
      - Show how to override Makefile parameters
    [README]:
      - Updated to point to the new LiveCD home of mklivecd,
        http://developer.berlios.de/projects/livecd/ with the
        correct mailing list info